Finished updating pics

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                                 <tr>
                                     <td>
                                         <a href="https://www.bathandbodyworks.com/c/all-candles/3-wick-candles" target="_blank">
-                                            <img src="https://i.postimg.cc/c1FgBPCj/limited-time-head-pink.png" alt="limited-time-head-pink" style="margin-bottom: -5px;">
-                                            <img src="https://i.postimg.cc/BZMDgPkg/main-candles.gif" alt="main_candles" style="margin-bottom: 16px;">
+                                            <img src="img/limited-time-head-pink.png" alt="limited-time-head-pink" style="margin-bottom: -5px;">
+                                            <img src="img/main-candles.gif" alt="main_candles" style="margin-bottom: 16px;">
                                         </a>
                                     </td>
                                 </tr>
@@ -97,9 +97,9 @@
                                 <tr>
                                     <td>
                                         <a href="https://www.bathandbodyworks.com/c/body-care/body-care-promotion" target="_blank">
-                                            <img src="https://i.postimg.cc/PJG7VFPg/main-lotion.jpg" alt="main_lotion" style="margin-bottom: -5px;">
-                                            <img src="https://i.postimg.cc/qvb1f11Z/limited-time-head.png" alt="limited-time-head" style="margin-bottom: -5px;">
-                                            <img src="https://i.postimg.cc/Gm5VrgH5/limited-time.png" alt="limited_time">
+                                            <img src="img/main-lotion.jpg" alt="main_lotion" style="margin-bottom: -5px;">
+                                            <img src="img/limited-time-head.png" alt="limited-time-head" style="margin-bottom: -5px;">
+                                            <img src="img/limited-time.png" alt="limited_time">
                                         </a>
                                     </td>
                                 </tr>
@@ -109,8 +109,8 @@
                                 <tr>
                                     <td>
                                         <a href="https://www.bathandbodyworks.com/g/moxy-collection" target="_blank">
-                                            <img src="https://i.postimg.cc/5NyzkNMM/main-hair.gif" alt="main_hair">
-                                            <img src="https://i.postimg.cc/VNdHfcMy/shop-button.png" alt="shop_button">
+                                            <img src="img/main-hair.gif" alt="main_hair">
+                                            <img src="img/shop-button.png" alt="shop_button">
                                         </a>
                                     </td>
                                 </tr>
@@ -126,7 +126,7 @@
                                     <td>
                                         <!--Today's Deal-->
                                         <a href="https://www.bathandbodyworks.com/g/top-offers" target="_blank">
-                                            <img src="https://i.postimg.cc/Vvc7Wrh1/top-offers.jpg" alt="top_offers">
+                                            <img src="img/top-offers.jpg" alt="top_offers">
                                         </a>  
                                     </td>
                                 </tr>
@@ -137,14 +137,14 @@
                                             <tr>
                                                 <td>
                                                     <a href="https://www.bathandbodyworks.com/t/wellness" target="_blank">
-                                                        <img src="https://i.postimg.cc/BQBzNpsz/offers-wellness.jpg" alt="offers_wellness">
+                                                        <img src="img/offers-wellness.jpg" alt="offers_wellness">
                                                     </a>
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <td>
                                                     <a href="https://www.bathandbodyworks.com/g/home-fragrance" target="_blank">
-                                                        <img src="https://i.postimg.cc/yYH5Ftq9/offers-wall.jpg" alt="offers_wallflowers">
+                                                        <img src="img/offers-wall.jpg" alt="offers_wallflowers">
                                                     </a>
                                                 </td>
                                             </tr>
@@ -155,14 +155,14 @@
                                             <tr>
                                                 <td>
                                                     <a href="https://www.bathandbodyworks.com/g/body-care" target="_blank">
-                                                        <img src="https://i.postimg.cc/1zj2wzP5/offers-body.jpg" alt="body_care">
+                                                        <img src="img/offers-body.jpg" alt="body_care">
                                                     </a>
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <td>
                                                     <a href="https://www.bathandbodyworks.com/g/hand-soaps-sanitizers" target="_blank">
-                                                        <img src="https://i.postimg.cc/KcLw3FWx/offers-soap.jpg" alt="hand_soap">
+                                                        <img src="img/offers-soap.jpg" alt="hand_soap">
                                                     </a>
                                                 </td>
                                             </tr>
@@ -173,14 +173,14 @@
                                             <tr>
                                                 <td>
                                                     <a href="https://www.bathandbodyworks.com/g/all-candles" target="_blank">
-                                                        <img src="https://i.postimg.cc/hjQwrqP8/offers-candles.jpg" alt="candles">
+                                                        <img src="img/offers-candles.jpg" alt="candles">
                                                     </a>
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <td>
                                                     <a href="https://www.bathandbodyworks.com/g/mens-shop" target="_blank">
-                                                        <img src="https://i.postimg.cc/90Gn6t9r/offers-men.jpg" alt="mens">
+                                                        <img src="img/offers-men.jpg" alt="mens">
                                                     </a>
                                                 </td>
                                             </tr>
@@ -198,20 +198,20 @@
                              <table class="more-love" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="max-width: 600px;">
                                 <tr>
                                     <td>
-                                        <img src="https://i.postimg.cc/2STPjwKW/love-break.png" alt="love-break" style="max-width: 600px; width: 100%;">
+                                        <img src="img/love-break.png" alt="love-break" style="max-width: 600px; width: 100%;">
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <a href="https://bbwi.attn.tv/p/bHr/landing-page" target="_blank">
-                                            <img src="https://i.postimg.cc/gJhShqNN/text-link.png" alt="text-link" style="max-width: 600px; width: 100%;">
+                                            <img src="img/text-link.png" alt="text-link" style="max-width: 600px; width: 100%;">
                                         </a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <a href="https://www.bathandbodyworks.com/s/BathAndBodyWorks/order-pickup" target="_blank">
-                                            <img src="https://i.postimg.cc/9XNYLzgG/buy-link.png" alt="buy_link" style="max-width: 600px; width: 100%;">
+                                            <img src="img/buy-link.png" alt="buy_link" style="max-width: 600px; width: 100%;">
                                         </a>
                                     </td>
                                 </tr>
@@ -226,8 +226,8 @@
                                <tr>
                                     <td>
                                         <a href="https://www.bathandbodyworks.com/store-locator" target="_blank">
-                                            <img src="https://i.postimg.cc/J4DcvmSS/visit-us-top.png" alt="visit-us-top" style="margin-bottom: -5px; max-width: 600px; width: 100%;">
-                                            <img src="https://i.postimg.cc/BQrcGk0b/visit-us-bottom.png" alt="visit-us-bottom" style="max-width: 600px; width: 100%;">
+                                            <img src="img/visit-us-top.png" alt="visit-us-top" style="margin-bottom: -5px; max-width: 600px; width: 100%;">
+                                            <img src="img/visit-us-bottom.png" alt="visit-us-bottom" style="max-width: 600px; width: 100%;">
                                         </a>
                                     </td>
                                </tr>
@@ -242,7 +242,7 @@
                                 <tr>
                                     <td>
                                         <a href="https://customercare.bathandbodyworks.com/hc/en-us/articles/4410658680083-What-is-your-return-policy" target="_blank">
-                                            <img src="https://i.postimg.cc/ZqRXWdGM/love-it.jpg" alt="love_it" style="max-width: 600px; width: 100%;">
+                                            <img src="img/love-it.jpg" alt="love_it" style="max-width: 600px; width: 100%;">
                                         </a>
                                     </td>
                                 </tr>
@@ -261,32 +261,32 @@
                                             <tr>
                                                 <td>
                                                     <a href="https://www.facebook.com/bathandbodyworks" target="_blank">
-                                                        <img src="https://i.postimg.cc/63DsJp11/fb-logo.png" alt="fb-logo" style="height: 45px; width: 45px; margin-right: 45px;">
+                                                        <img src="img/fb-logo.png" alt="fb-logo" style="height: 45px; width: 45px; margin-right: 45px;">
                                                     </a>
                                                 </td>
                                                 <td>
                                                     <a href="https://twitter.com/bathbodyworks" target="_blank">
-                                                        <img src="https://i.postimg.cc/RhQgsCrt/twitter-logo.png" alt="twitter-logo" style="height: 45px; width: 45px; margin-right: 45px;">
+                                                        <img src="img/twitter-logo.png" alt="twitter-logo" style="height: 45px; width: 45px; margin-right: 45px;">
                                                     </a>
                                                 </td>
                                                 <td>
                                                     <a href="https://www.instagram.com/bathandbodyworks" target="_blank">
-                                                        <img src="https://i.postimg.cc/x19wS7tY/ig-logo.png" alt="ig-logo" style="height: 45px; width: 45px; margin-right: 45px;">
+                                                        <img src="img/ig-logo.png" alt="ig-logo" style="height: 45px; width: 45px; margin-right: 45px;">
                                                     </a>
                                                 </td>
                                                 <td>
                                                     <a href="https://www.tiktok.com/@bathandbodyworks" target="_blank">
-                                                        <img src="https://i.postimg.cc/Bvk7twcj/tiktok-logo.png" alt="tiktok-logo" style="height: 45px; width: 45px; margin-right: 45px;">
+                                                        <img src="img/tiktok-logo.png" alt="tiktok-logo" style="height: 45px; width: 45px; margin-right: 45px;">
                                                     </a>
                                                 </td>
                                                 <td>
                                                     <a href="https://www.youtube.com/user/bathandbodyworks" target="_blank">
-                                                        <img src="https://i.postimg.cc/dVFyjSTT/youtube-logo.png" alt="youtube-logo" style="height: 45px; width: 45px; margin-right: 45px;">
+                                                        <img src="img/youtube-logo.png" alt="youtube-logo" style="height: 45px; width: 45px; margin-right: 45px;">
                                                     </a>
                                                 </td>
                                                 <td>
                                                     <a href="https://www.pinterest.com/bathbodyworks/" target="_blank">
-                                                        <img src="https://i.postimg.cc/8zk0Yvzz/pinterest-logo.png" alt="pinterest-logo" style="height: 45px; width: 45px;">
+                                                        <img src="img/pinterest-logo.png" alt="pinterest-logo" style="height: 45px; width: 45px;">
                                                     </a>
                                                 </td>
                                             </tr>
@@ -301,17 +301,17 @@
                                         <tr>
                                             <td>
                                                 <a href="https://www.bathandbodyworks.com/customer-care/privacy-and-security.html" target="_blank">
-                                                    <img src="https://i.postimg.cc/dVWxc0hm/private-policy-link.jpg" alt="privacy-policy">
+                                                    <img src="img/private-policy-link.jpg" alt="privacy-policy">
                                                 </a>
                                             </td>
                                             <td>
                                                 <a href="https://www.bathandbodyworks.com/my-account" target="_blank">
-                                                    <img src="https://i.postimg.cc/B63mGvdm/unsubscribe-link.jpg" alt="unsubscribe">
+                                                    <img src="img/unsubscribe-link.jpg" alt="unsubscribe">
                                                 </a>
                                             </td>
                                             <td>
                                                 <a href="https://customercare.bathandbodyworks.com/hc/en-us" target="_blank">
-                                                    <img src="https://i.postimg.cc/6QbJc0VK/customer-care-link.jpg" alt="customer-care">
+                                                    <img src="img/customer-care-link.jpg" alt="customer-care">
                                                 </a>
                                             </td>
                                         </tr>
@@ -322,7 +322,7 @@
                                 <!--start of footer break row-->
                                 <tr>
                                     <td>
-                                        <img src="https://i.postimg.cc/GhFWVrPq/footer-break.png" alt="footer-break" style="margin-bottom: 15px; max-width: 600px; width: 100%;">
+                                        <img src="img/footer-break.png" alt="footer-break" style="margin-bottom: 15px; max-width: 600px; width: 100%;">
                                     </td>
                                 </tr>
                                 <!--end of footer break row-->
@@ -340,22 +340,22 @@
                                        <table class="fine-print-top" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="max-width: 600px;">
                                             <tr>
                                                 <td>
-                                                    <img src="https://i.postimg.cc/50HcRCpC/footer-1.png" alt="footer-1" style="width: 100%; max-width: 600px;">
+                                                    <img src="img/footer-1.png" alt="footer-1" style="width: 100%; max-width: 600px;">
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <img src="https://i.postimg.cc/kG80nP0M/footer-2.png" alt="footer-2" style="width: 100%; max-width: 600px;">
+                                                    <img src="img/footer-2.png" alt="footer-2" style="width: 100%; max-width: 600px;">
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <img src="https://i.postimg.cc/YqBcdjFv/footer-3.png" alt="footer-3" style="width: 100%; max-width: 600px;">
+                                                    <img src="img/footer-3.png" alt="footer-3" style="width: 100%; max-width: 600px;">
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <img src="https://i.postimg.cc/wxm85D1K/footer-4.png" alt="footer-4" style="width: 100%; max-width: 600px;">
+                                                    <img src="img/footer-4.png" alt="footer-4" style="width: 100%; max-width: 600px;">
                                                 </td>
                                             </tr>
                                         </table>
