--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <tr>
                                     <td>
                                         <a href="https://www.bathandbodyworks.com/" target="_blank">
-                                            <img src="/img/header-logo.jpg" alt="header_logo" style="width: 100%">
+                                            <img src="./img/header-logo.jpg" alt="header_logo" style="width: 100%">
                                         </a>
                                     </td>
                                 </tr>
